--- a/Semana4/web/index.html
+++ b/Semana4/web/index.html
@@ -11,13 +11,13 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
+        <form action="Semana4Servlet">
         <div>Faça o seu login</div>
-        <form>
             <div>Digite o login:</div>
-            <input  type="text" name="liginDigitado" />
+            <input  type="text" name="loginDigitado" />
             <div>Digite a senha:</div>
             <input  type="text" name="senhaDigitado" />
-            <input type="submit" value="login" />
+            <input type="submit" name="login" value="login" />
         </form>
     </body>
 </html>
